RESOLVED FIXED92588
RenderBlock::offsetForContents() is wrong in flipped blocks writing modes
https://bugs.webkit.org/show_bug.cgi?id=92588
Summary RenderBlock::offsetForContents() is wrong in flipped blocks writing modes
mitz
Reported 2012-07-28 21:10:40 PDT
Hit test results are wrong in flipped blocks writing modes with block column axis
Attachments
Convert to unflipped coordinates before applying overflow scroll and column adjustment (7.63 KB, patch)
2012-07-28 21:42 PDT, mitz
no flags
Convert to unflipped coordinates before applying overflow scroll and column adjustment (7.11 KB, patch)
2012-07-28 21:44 PDT, mitz
sam: review+
mitz
Comment 1 2012-07-28 21:42:27 PDT
Created attachment 155159 [details] Convert to unflipped coordinates before applying overflow scroll and column adjustment
mitz
Comment 2 2012-07-28 21:44:12 PDT
Created attachment 155160 [details] Convert to unflipped coordinates before applying overflow scroll and column adjustment
mitz
Comment 3 2012-07-28 22:00:33 PDT
Note You need to log in before you can comment on or make changes to this bug.