Source/WebCore: RenderBlock::offsetForContents() is wrong in flipped blocks writing modes https://bugs.webkit.org/show_bug.cgi?id=92588

Reviewed by Sam Weinig.

Tests: fast/multicol/hit-test-block-axis-flipped.html
       fast/writing-mode/flipped-blocks-hit-test-overflow-scroll.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::offsetForContents): Flip the point, which puts it back in unflipped
coordinates, before adding the scroll offset and adjusting for columns, then flip it back.
(WebCore::RenderBlock::adjustPointToColumnContents): Changed the inline-axis cases to
work with an unflipped point.

LayoutTests: Hit test results are wrong in flipped blocks writing modes with block column axis
https://bugs.webkit.org/show_bug.cgi?id=92588

Reviewed by Sam Weinig.

* fast/multicol/hit-test-block-axis-flipped-expected.txt: Added.
* fast/multicol/hit-test-block-axis-flipped.html: Added.



Canonical link: https://commits.webkit.org/110411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123977 268f45cc-cd09-0410-ab3c-d52691b4dbfc